--- a/style.css
+++ b/style.css
@@ -152,22 +152,28 @@
     background-image: url("img/hero_image.jpg");
     background-size: cover;
     height: 400px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: absolute;
 }
 .hero-message{
     background-color: white;
     color: #0f1111;
     height: 40px;
-    width: 87%;
+    width: 96.7%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 150px;
+    margin-bottom: 80px;
+}
+.hero-message p {
+    font-size: 14px;
 }
 .hero-message a {
     text-decoration: none;
+    color: #2162a1;
 }
 .hero-message a:hover{
     text-decoration-line: line-through;
@@ -183,15 +189,132 @@
 .box {
     /* border: 2px solid black; */
     background-color: white;
-    height: 400px;
+    height: 380px;
     width: 23%;
     padding: 20px 0px 15px;
     margin-top: 15px;
+    z-index: 10;
 }
 .box-img{
-    height: 350px;
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
 }
-.box-content{
-    margin-left: 10px;
+.box-content {
+    margin-left: 1rem;
     margin-right: 1rem;
+}
+.box-content h2{
+    font-size: 21px;
+}
+.box-content a{
+    text-decoration: none;
+    color: #2162a1;
+}
+.shop-section {
+    margin-top: 25%;
+}
+
+/* Footer style */
+.footer-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.footer-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul {
+    margin-top: 40px;
+}
+ul p{
+    font-weight: 700;
+}
+ul a {
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 12px ;
+    color: #dddddd;
+}
+
+.footer-panel3 {
+    border-top: 1px solid #3a4553;
+    background-color: #222f3d;
+    height:80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-logo{
+    background-image: url("img/amazon_logo.png");
+    background-size: cover;
+    width: 90px;
+    height: 55px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 100px;
+}
+.footer-box1{
+    border: 1px solid #dddddd;
+    height: 30px;
+    width: 135px;
+    font-size: 13px;
+    color: #dddddd;
+    border-radius: 5%;
+    margin-left: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-box2{
+    border: 1px solid #dddddd;
+    height: 30px;
+    width: 135px;
+    font-size: 13px;
+    color: #dddddd;
+    border-radius: 5%;
+    margin-left: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-box3{
+    border: 1px solid #dddddd;
+    height: 30px;
+    width: 135px;
+      font-size: 13px;
+    color: #dddddd;
+    border-radius: 5%;
+    margin-left: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-panel4{
+    background-color:#0f1111;
+    color: white;
+    height: 80px;
+}
+
+.page{
+    font-size: 0.8rem;
+    text-align: center;
+    padding-top: 25px;
+}
+.copyright{
+    font-size: 0.8rem;
+    text-align: center;
+    padding-top: 5px;
 }
